[package]
name = "cf-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Bob Liu <akagi201@gmail.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["wasm-bindgen"] }
console_error_panic_hook = { version = "0.1.7" }
hex = "0.4"
js-sys = "0.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
url = "2.5"
uuid = { version = "1.0", features = ["js", "v4"] }
worker = { version = "0.6", features = ['http'] }
